# chime-frb-open-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
cfod/: __init__.py  assemble_chunk.py  chime_intensity.py  filterbank.py  msgpack2fil.py  sigproc.py
cfod/analysis/: exposure.py  localization.py  waterfall.py
cfod/analysis/filterbank/: filterbank.py  sigproc.py
cfod/analysis/intensity/: assemble_chunk.py  chime_intensity.py
cfod/routines/: actor.py  catalogs.py  localizer.py  msgpack2fil.py  receiver.py  voe.py  waterfaller.py
cfod/scripts/: msgpack2fil
cfod/utilities/: FRB-DETECTION-2021-08-19-21:50:28.900992UTC+0000_7f17d982b315.xml  FRB-SUBSEQUENT-2021-08-22-23:16:06.571791UTC+0000_f4a33adeaa19.xml  OBS-RETRACTION-2021-09-07-09:49:11.821703UTC+0000_65550c2c8d65.xml  chimefrb_voevent_tutorial.ipynb  csv_writer.py  fetch.py  parse.py  receive.py
