[tool.poetry]
name = "cfod"
version = "2021.6.4"
description = "CHIME FRB Open Data"
authors = ["Shiny Brar <charanjotbrar@gmail.com>"]
license = "MIT"
repository = "https://github.com/chime-frb-open-data/chime-frb-open-data"
homepage = "https://chime-frb-open-data.github.io/"
readme = "README.md"

classifiers=[
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Astronomy",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0"
numpy = "^1.20"
healpy = "^1.14"
matplotlib = "^3.4"
msgpack-python = "^0.5"
pandas = {version = "^1.2", optional = true}
scipy = "^1.6"
h5py = "^3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13"
pytest = "^6.2"
black = "^22.3"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.scripts]
msgpack2fil = "cfod.routines.msgpack2fil:runner"


[tool.commitizen]
name = "cz_conventional_commits"
version = "2021.8.0"
tag_format = "$version"
version_files = ["pyproject.toml:version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
